--- a/src/app/leave/airticket-booking/airticket-booking.component.html
+++ b/src/app/leave/airticket-booking/airticket-booking.component.html
@@ -335,7 +335,7 @@
                                                 <thead class="table-light text-white font-type">
                                                 <tr>
                                                     <th>Passengers</th>
-                                                    <th>Age</th>
+                                                    <th>DOB</th>
                                                 </tr>
                                             </thead>
                                             <tbody class="list form-check-all font-type fs-11">
