--- a/src/app/payroll/salary-details/salary-details.component.scss
+++ b/src/app/payroll/salary-details/salary-details.component.scss
@@ -23,7 +23,7 @@ input[type="text"]:focus {
 
 .bordrsty
 {
-   border: 1px solid #1a6fd8;
+   border: 1px solid #000000;
 }
 
 .img-sizes {
@@ -35,5 +35,5 @@ input[type="text"]:focus {
 {
    font-size: 20px;
    color: #000000;
-   font-weight: 800 !important;
+  // font-weight: 800 !important;
 }
