--- a/src/app/reports/documents-report/documents-report.component.html
+++ b/src/app/reports/documents-report/documents-report.component.html
@@ -18,7 +18,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="page-title-box d-sm-flex align-items-center justify-content-between">
-                                        <h4 class="mb-sm-0">Documents Reports</h4>
+                                        <h4 class="mb-sm-0">Documents Report</h4>
                                     </div>
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                                         <div class="card-header border-bottom" style="padding-bottom: 10px;padding-top: 10px;">
                                             <div class="row align-items-center gy-3">
                                                 <div class="col-sm">
-                                                    <h6 class="card-title">Documents Reports</h6>
+                                                    <h6 class="card-title">Documents Report</h6>
                                                 </div>
                                                 <div class="col-sm-auto">
                                                  
