--- a/src/app/HiringManagement/offerletter-int/offerletter-int.component.html
+++ b/src/app/HiringManagement/offerletter-int/offerletter-int.component.html
@@ -98,8 +98,8 @@
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12">
                                             <div class="p-2">
-                                                <h6 class="fs-14 font-type lh-base text-black">On behalf of <span class="fw-semibold text-italic fs-14">Worldwide Oilfield Machine M.E. "({{this.offerletterdt[0].COMPANY}})", </span> It is my pleasure to offer you the position of 
-                                                <span class="fw-semibold text-italic fs-14">"{{this.offerletterdt[0].DESIGNATION}}" </span> is approved based on the interview/internal selection process.  We believe that your skill, expertise and the experience makes you more suitable for this position.</h6>
+                                                <h6 class="fs-14 font-type lh-base text-black">On behalf of <span class="fw-semibold text-italic fs-14">Worldwide Oilfield Machine M.E. ({{this.offerletterdt[0].COMPANY}}), </span> It is my pleasure to offer you the position of 
+                                                <span class="fw-semibold text-italic fs-14">{{this.offerletterdt[0].DESIGNATION}} </span> is approved based on the interview/internal selection process.  We believe that your skill, expertise and the experience makes you more suitable for this position.</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -117,7 +117,7 @@
                                                         <tr>
                                                             <td class="fs-14 text-black">Employment Start Date</td>
                                                             <td class="fs-14 text-black">:</td>
-                                                            <td class="fs-14 text-black">26/06/2024</td>
+                                                            <td class="fs-14 text-black">TBC</td>
                                                         </tr>
                                                     </tbody>
                                                 </table>
@@ -186,10 +186,16 @@
                                                                 <td class="fw-semibold text-black fs-14">:</td>
                                                                 <td class="text-black fs-14">To and from work place provided by the company</td>
                                                             </tr>
-                                                            <tr *ngIf="this.offerletterdt[0].MEDICAL_INSURANCE==1">
+                                                            <tr *ngIf="this.offerletterdt[0].FAMILY_INSURANCE==1 && this.offerletterdt[0].MEDICAL_INSURANCE==1">
                                                                 <td class="fw-semibold text-black fs-14">Medical Insurance</td>
                                                                 <td class="fw-semibold text-black fs-14">:</td>
-                                                                <td class="text-black fs-14">Private medical insurance to self (spouse and two kids below 18 years of age) by the company</td>
+                                                                <td class="text-black fs-14">Private medical insurance to self, spouse and two kids below 18 
+                                                                    years of age by the company</td>
+                                                            </tr>
+                                                            <tr *ngIf="this.offerletterdt[0].FAMILY_INSURANCE==0 && this.offerletterdt[0].MEDICAL_INSURANCE==1">
+                                                                <td class="fw-semibold text-black fs-14">Medical Insurance</td>
+                                                                <td class="fw-semibold text-black fs-14">:</td>
+                                                                <td class="text-black fs-14">Private medical insurance to self by the company</td>
                                                             </tr>
                                                             <tr *ngIf="this.offerletterdt[0].LIFE_INSURANCE==1">
                                                                 <td class="fw-semibold text-black fs-14">Life Insurance</td>
@@ -201,10 +207,30 @@
                                                                 <td class="fw-semibold text-black fs-14">:</td>
                                                                 <td class="text-black fs-14">Provided by the company</td>
                                                             </tr>
-                                                            <tr *ngIf="this.offerletterdt[0].FAMILY_AIRTICKET==1">
+                                                            <tr *ngIf="this.offerletterdt[0].AIRTICKET_ELIGIBILITY==1">
                                                                 <td class="fw-semibold text-black fs-14">Home Ticket</td>
                                                                 <td class="fw-semibold text-black fs-14">:</td>
-                                                                <td class="text-black fs-14">One economy class air ticket to and from the home country for self (spouse and two kids below 18 years of age) once every 24/12 months of employment. </td>
+                                                                <td class="text-black fs-14">Not Eligible</td>
+                                                            </tr>
+                                                            <tr *ngIf="this.offerletterdt[0].AIRTICKET_ELIGIBILITY==2 &&  this.offerletterdt[0].FAMILY_AIRTICKET==1">
+                                                                <td class="fw-semibold text-black fs-14">Home Ticket</td>
+                                                                <td class="fw-semibold text-black fs-14">:</td>
+                                                                <td class="text-black fs-14">One economy class air ticket to and from the home country for self, spouse and two kids below 18 years of age once every 12 months of employment. </td>
+                                                            </tr>
+                                                            <tr *ngIf="this.offerletterdt[0].AIRTICKET_ELIGIBILITY==2 &&  this.offerletterdt[0].FAMILY_AIRTICKET==0">
+                                                                <td class="fw-semibold text-black fs-14">Home Ticket</td>
+                                                                <td class="fw-semibold text-black fs-14">:</td>
+                                                                <td class="text-black fs-14">One economy class air ticket to and from the home country for self once every 12 months of employment. </td>
+                                                            </tr>
+                                                            <tr *ngIf="this.offerletterdt[0].AIRTICKET_ELIGIBILITY==3 &&  this.offerletterdt[0].FAMILY_AIRTICKET==1">
+                                                                <td class="fw-semibold text-black fs-14">Home Ticket</td>
+                                                                <td class="fw-semibold text-black fs-14">:</td>
+                                                                <td class="text-black fs-14">One economy class air ticket to and from the home country for self, spouse and two kids below 18 years of age once every 24 months of employment. </td>
+                                                            </tr>
+                                                            <tr *ngIf="this.offerletterdt[0].AIRTICKET_ELIGIBILITY==3 &&  this.offerletterdt[0].FAMILY_AIRTICKET==0">
+                                                                <td class="fw-semibold text-black fs-14">Home Ticket</td>
+                                                                <td class="fw-semibold text-black fs-14">:</td>
+                                                                <td class="text-black fs-14">One economy class air ticket to and from the home country for self once every 24 months of employment. </td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -228,12 +254,12 @@
                                                             <tr>
                                                                 <td class="fw-semibold text-black fs-14">Probation period</td>
                                                                 <td class="fw-semibold text-black fs-14">:</td>
-                                                                <td class="fw-medium text-black fs-14">{{this.offerletterdt[0].PROBATION_PERIOD}}</td>
+                                                                <td class="fw-medium text-black fs-14">{{this.offerletterdt[0].PROBATION_PERIOD}} Months from the date of joining</td>
                                                             </tr>
                                                             <tr>
                                                                 <td class="fw-semibold text-black fs-14">Notice period</td>
                                                                 <td class="fw-semibold text-black fs-14">:</td>
-                                                                <td class="fw-medium text-black fs-14">{{this.offerletterdt[0].NOTICE_PERIOD}}</td>
+                                                                <td class="fw-medium text-black fs-14">{{this.offerletterdt[0].NOTICE_PERIOD}} Days in writing by either party</td>
                                                             </tr>
 
                                                             <tr>
@@ -289,7 +315,7 @@
                                         </div>
                                     </div>
                                     </div>
-
+                                    <hr style="border:1px solid #000000;width: 150px;">
                                     <div class="row margin-up-10">
                                         <div class="col-lg-12 col-md-12">
                                             <div class="p-2">
@@ -315,6 +341,8 @@
                                             </div>
                                         </div>
                                     </div>
+
+                                    <hr style="border:1px solid #000000;width: 250px;">
 
                                     <div class="row">
                                         <div class="col-lg-4 col-md-4">
