--- a/src/app/employee/bustrip-hr/bustrip-hr.component.html
+++ b/src/app/employee/bustrip-hr/bustrip-hr.component.html
@@ -743,6 +743,9 @@
                                 <div *ngSwitchCase="bussteam.APPROVED_STATUS == '7'">
                                     <span class="badge bg-danger text-white width-budge fs-11" data-target="#statusModal" data-bs-toggle="modal" href="#statusModal" (click)="Approvelist(bussteam.REQ_ID)">{{bussteam.STATUS_VAL}}</span>
                                 </div>
+                                <div *ngSwitchCase="bussteam.APPROVED_STATUS == '6'">
+                                    <span class="badge bg-danger text-white width-budge fs-11" data-target="#statusModal" data-bs-toggle="modal" href="#statusModal" (click)="Approvelist(bussteam.REQ_ID)">{{bussteam.STATUS_VAL}}</span>
+                                </div>
                             </ng-container>
                         </td>
                             <td>
@@ -775,6 +778,12 @@
                                         <li class="list-inline-item expandChildTable" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="View Request Details">
                                             <a href="#ViewRequestModal" class="text-blue d-inline-block"  data-bs-toggle="modal" href="#ViewRequestModal" (click)="viewpersonal(bussteam.EMP_CODE,bussteam.REQ_ID )">
                                                 <i class="ri-eye-fill fs-16"></i>
+                                            </a>
+                                        </li>
+
+                                        <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Cancel" >
+                                            <a class="remove-item-btn" data-bs-toggle="modal" href="#CancelModal">
+                                            <button type="button" class="btn btn-danger btn-sm " id="buttoncancel"><i class="fa fa-times-circle-o" aria-hidden="true" style="font-size: 18px;" (click) = "setSelectedvalues(bussteam.REQ_ID,bussteam.EMP_CODE)"></i></button>
                                             </a>
                                         </li>
                                     
