--- a/src/app/payroll/salary-details/salary-details.component.html
+++ b/src/app/payroll/salary-details/salary-details.component.html
@@ -384,17 +384,17 @@
                                         <div class="card-body">
                                             <div id="htmlElementId" >
                                                 <div class="card-body">
-                                                    <div class="row gy-3" style="border-bottom: 3px solid #1a6fd8;">
+                                                    <div class="row gy-3" style="border-bottom: 3px solid #000000;">
                                                         <div class="col-md-3">
                                                             <!-- <img src={{hostname}}{{this.companyData[0].DATA_VALUE}} alt="" class="img-size"> -->
                                                             <div class="avatar-title-lg p-1" *ngIf="this.companyData[0].COMPANY_ID=='Worldwide Oilfield Machine Middle East' || this.companyData[0].COMPANY_ID=='Worldwide Oilfield Machine Sales and Marketing Ltd' ">
-                                                                <img src="assets\styles\img\WOM Logo - 2024.png" alt="" class="img-sizes">
+                                                                <img src="assets\styles\img\WOM Logo - 2024.png" alt="" class="img-size">
                                                             </div>
                                                             <div class="avatar-title-lg p-1" *ngIf="this.companyData[0].COMPANY_ID=='WOM Valves & Controls International FZE' ">
-                                                                <img src="assets\styles\img\WVC-LOGO-2024.png" alt="" class="img-sizes">
+                                                                <img src="assets\styles\img\WVC-LOGO-2024.png" alt="" class="img-size">
                                                             </div>
                                                             <div class="avatar-title-lg p-1" *ngIf="this.companyData[0].COMPANY_ID=='Magnum Technology Center FZE' ">
-                                                                <img src="assets\styles\img\MTC logo.png" alt="" class="img-sizes">
+                                                                <img src="assets\styles\img\MTC logo.png" alt="" class="img-size">
                                                             </div>
                                                         </div>
                                                         <div class="col-md-9  text-center">
@@ -405,7 +405,7 @@
                                                     </div>
                     
                                                     <div class="mt-4 text-center mb-4" style="margin-top: 40px!important;">
-                                                        <h5 class="card-title flex-grow-1 mb-0 font-type fw-semibold payslip">PAY SLIP<input type="text" class="mb-1 font-type fw-semibold  payslip" style="border: none;" name="datedisplay" id="datedisplay" [formControl]="datedisplay" readonly></h5>
+                                                        <h5 class="card-title flex-grow-1 mb-0 font-type fw-semibold payslip"><input type="text" class="mb-1 font-type fw-semibold  payslip" style="border: none;text-align: right;" value="PAY SLIP" readonly><input type="text" class="mb-1 font-type fw-semibold  payslip" style="border: none;" name="datedisplay" id="datedisplay" [formControl]="datedisplay" readonly></h5>
                                                     </div>
                     
                                                     <div class="row mb-2">
@@ -459,9 +459,9 @@
                                                             <table class="table align-middle table-nowrap mb-0  table-bordered">
                                                                 <thead class=" bg-light-blue">
                                                                     <tr class="bg-light-blue font-type h-30 fs-15 text-uppercase  table-bordered  bordrsty">
-                                                                        <th scope="col" class="bg-blue payslip" colspan="2" style="text-align: center;background-color: #5bb4ec;">Earnings</th>
+                                                                        <th scope="col" class="bg-blue payslip" colspan="2" style="text-align: center;">Earnings</th>
                                                                     </tr>
-                                                                    <tr class="bg-light-blue font-type h-30 fs-15  table-bordered bordrsty" style="background-color: #5bb4ec;">
+                                                                    <tr class="bg-light-blue font-type h-30 fs-15  table-bordered bordrsty">
                                                                         <th scope="col" class="bg-blue text-center  bordrsty payslip">Description</th>
                                                                         <th scope="col" class="bg-blue text-center payslip">Amount (AED)</th>
                                                                     </tr>
@@ -500,9 +500,9 @@
                                                                 <table class="table align-middle table-nowrap mb-0  table-bordered">
                                                                     <thead class=" bg-light-blue">
                                                                         <tr class="bg-light-blue font-type h-30 fs-15 text-uppercase  table-bordered  bordrsty">
-                                                                            <th scope="col" class="bg-blue payslip" colspan="2" style="text-align: center;background-color: #5bb4ec;">DEDUCTIONS</th>
+                                                                            <th scope="col" class="bg-blue payslip" colspan="2" style="text-align: center;">DEDUCTIONS</th>
                                                                         </tr>
-                                                                        <tr class="bg-light-blue font-type h-30 fs-15  table-bordered bordrsty" style="background-color: #5bb4ec;">
+                                                                        <tr class="bg-light-blue font-type h-30 fs-15  table-bordered bordrsty">
                                                                             <th scope="col" class="bg-blue text-center payslip bordrsty">Description</th>
                                                                             <th scope="col" class="bg-blue text-center payslip">Amount (AED)</th>
                                                                         </tr>
@@ -543,8 +543,8 @@
                                                                 <div class="table-responsive">
                                                                     <table class="table align-middle table-nowrap mb-0  table-bordered">
                                                                         <tfoot class="font-type bg-light-blue" *ngIf="payslipdt && payslipdt.length > 0">
-                                                                            <tr class="bordrsty" style="background-color: #5bb4ec;">
-                                                                                <td colspan="1" class="fw-semibold  text-blue bordrsty text-uppercase payslip">Net Pay</td>
+                                                                            <tr class="bordrsty">
+                                                                                <td colspan="1" class="fw-semibold  text-blue bordrsty text-uppercase payslip" style="text-align: right;">Net Pay</td>
                                                                                 <td class="fw-semibold fs-15 font-type" style="text-align: right;border-left-style: none;">
                                                                                     <h6 class="font-type fw-semibold fcolour payslip" >UAE Dirham {{this.payslipdt[0].NET_AMOUNT}}</h6>
                                                                                     <h6 class="font-type fw-semibold fcolour payslip" >UAE Dirham {{ convertToWords(payslipdt[0].NET_AMOUNT) }} Only</h6>
